# butter

./: Cargo.toml
derive-macros/: Cargo.toml
derive-macros/src/: lib.rs
examples/flappy-bird/: project-settings.toml  world.lua  world.scene
examples/flappy-bird/character/: character.lua
examples/flappy-bird/pipe/: pipe.lua
examples/flappy-bird/should-be-builtin-scripts/: collider.lua  rigidbody.lua
shaders/: shader.metal  shader.wgsl
src/: asset_manager.rs  colour.rs  deserialize.rs  engine.rs  event_manager.rs  input_manager.rs  keys.rs  lib.rs  lua.rs  main.rs  physics.rs  renderer.rs  scene_manager.rs  script_manager.rs  settings.rs  timer.rs
src/asset_manager/: texture.rs
src/deserialize/: template_scene.rs
src/lua/: draw.rs  engine.rs  input.rs  math.rs  node.rs  physics_server.rs  scene.rs  texture.rs  time.rs
src/math/: matrix.rs  vector.rs
src/scene_manager/: node.rs  scene_template.rs  scene_tree.rs
src/script_manager/: fields.rs
src/settings/: engine_version.rs
